[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "saito",email = "koichi_saito@cosmo-oil.co.jp"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "cognite-toolkit (==0.6.53)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
